Feat: create more tests for default game